src/test/deca/syntax/valid/test_synt/control_structures/if_else_vide.deca
// Description:
//    Test de controle structure if and else vide 
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//
// Historique:
//    cree le 14/01/2022

{
    if( condition == true )
    {
       
    }
    else
    {
        
    }
    
}