src/test/deca/syntax/invalid/test_synt/control_structures/if_empty.deca
// Description:
//    Test de if sans rien dans parens
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//    context: pas d'erreur , tout variables declarées ,condition bien respectée   
//
// Historique:
//    cree le 14/01/2022

{
    if() {}
}